<resources>
    <string name="app_name">TreatWell</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">log in</string>
    <string name="empty_username_error_message">Please enter the username</string>
    <string name="empty_password_error_message">Please enter the password</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="logout">Log out</string>
    <string name="home">Home</string>
    <string name="empty_first_name_error_message">Please enter your first name</string>
    <string name="empty_lname_error">Please enter your last name</string>
    <string name="empty_email_error">Please enter your email address</string>
    <string name="empty_dob_error">please enter your date of birth</string>
    <string name="empty_bg_error">Please enter your blood group</string>
    <string name="empty_phone_error">Please enter your Phone Number</string>
    <string name="sign_up">SIGN UP</string>
    <string name="empty_name_error">Please enter your name</string>
    <string name="add_money">Add Money</string>
    <string name="empty_add_money_error">Please enter the Amount</string>
    <string name="please_enter_the_amount">Please enter the amount</string>
    <string name="pending_appointments">Pending Appointments</string>

    <string-array name="SortByOptions">
        <item>Distance</item>
        <item>Hospital_Ranking</item>
        <item>Doctor_Ranking</item>
        <item>Fees</item>
    </string-array>

</resources>
