<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bittukumar.treatwell.Activities.RegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_usernameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/register_usernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_usernameTIL"
        app:layout_constraintRight_toRightOf="@id/register_usernameTIL"
        app:layout_constraintTop_toBottomOf="@id/register_usernameTIL">

        <EditText
            android:id="@+id/register_passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_firstnameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_usernameTIL"
        app:layout_constraintRight_toRightOf="@id/register_usernameTIL"
        app:layout_constraintTop_toBottomOf="@id/register_passwordTIL">

        <EditText
            android:id="@+id/register_firstnameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_middlenameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_usernameTIL"
        app:layout_constraintRight_toRightOf="@id/register_usernameTIL"
        app:layout_constraintTop_toBottomOf="@id/register_firstnameTIL">

        <EditText
            android:id="@+id/rgister_middlenameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/middle_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_lastnameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_usernameTIL"
        app:layout_constraintRight_toRightOf="@id/register_usernameTIL"
        app:layout_constraintTop_toBottomOf="@id/register_middlenameTIL">

        <EditText
            android:id="@+id/register_lastnameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_emailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_usernameTIL"
        app:layout_constraintRight_toRightOf="@id/register_usernameTIL"
        app:layout_constraintTop_toBottomOf="@id/register_lastnameTIL">

        <EditText
            android:id="@+id/register_emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_dobTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_usernameTIL"
        app:layout_constraintRight_toRightOf="@id/register_usernameTIL"
        app:layout_constraintTop_toBottomOf="@id/register_emailTIL">

        <EditText
            android:id="@+id/register_dobET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_bloodgroupTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_usernameTIL"
        app:layout_constraintRight_toRightOf="@id/register_usernameTIL"
        app:layout_constraintTop_toBottomOf="@id/register_dobTIL">

        <EditText
            android:id="@+id/register_bloodgroupET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/blood_group" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_phoneTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_usernameTIL"
        app:layout_constraintRight_toRightOf="@id/register_usernameTIL"
        app:layout_constraintTop_toBottomOf="@id/register_bloodgroupTIL">

        <EditText
            android:id="@+id/register_phoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_genderTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_usernameTIL"
        app:layout_constraintRight_toRightOf="@id/register_usernameTIL"
        app:layout_constraintTop_toBottomOf="@id/register_phoneTIL">

        <EditText
            android:id="@+id/register_genderET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="@id/register_usernameTIL"
        app:layout_constraintRight_toRightOf="@id/register_usernameTIL"
        app:layout_constraintTop_toBottomOf="@id/register_genderTIL" />

</android.support.constraint.ConstraintLayout>
